Fix banner image on small screens

--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,7 @@
 .home img {
 	padding: 20px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 90%;
 }
